--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <title>FlappyBird</title>
     <script type="text/javascript" src="bower_components/phaser/phaser.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="states/load.js"></script>
+    <script type="text/javascript" src="states/menu.js"></script>
+    <script type="text/javascript" src="states/play.js"></script>
+    <script type="text/javascript" src="game.js"></script>
 </head>
 <body>
     <div id="game"></div>
